[package]
name = "skybot"
version = "0.1.0"
edition = "2021"

[dependencies]  
futures = "0.3"
futures-util = { version = "0.3", features = ["async-await-macro"] }  
zvariant = "5.5"  
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
bigdecimal = "0.4.8"
serde = "1.0.219"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "macros"]

[dependencies.zbus]
version = "5.7"
default-features = false
features = ["tokio"]

[dependencies.reqwest]
version = "0.12.11"
default-features = false
features = ["json", "rustls-tls"]
